refactored code less prototype

--- a/books.html
+++ b/books.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>My JS Book Project</title>
-<script src="js-project.html"></script>
+<script src="books.js"></script>
 </head>
 
 <body>
